# Delta-Notes-Endpoint

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  test.json  test.sh  todo.md
files/: ReadMe.md
local.db/: 000307.sst  IDENTITY  LOG.old.1718102245362451  LOG.old.1718102269411454  LOG.old.1718102334772968  LOG.old.1718102578077407  MANIFEST-000304
src/: auth.rs  database.rs  enpoint.rs  filebucket.rs  main.rs  server.rs  tests.rs
src/filehalndler/: file_list.rs  file_serving.rs  get_courses.rs  mod.rs  test.rs
