[package]
name = "Delta-Notes-Endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = "1.0.199"
serde_json = "1.0.116"
shuttle-runtime = "0.44.0"
shuttle-tide = "0.44.0"
tide = "0.16.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
 urlencoding = "2.1.3"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
