[package]
name = "Delta-Notes-Endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.199"
serde_json = "1.0.116"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
 urlencoding = "2.1.3"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
rocket = { version = "0.5", features = ["json"] }
surrealdb = "1.5.2"
